[package]
name = "tidy"
version = "0.1.0"
authors = ["Kevin Nguyen <ngynkvn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version = "0.25.3", features = ['bundled']}
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
structopt = "0.3.21"
chrono = "0.4.19"                    # Date and time library for Rust
